--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
       </form>
       <div class="mx-1">
+        <button class="btn btn-danger" onclick="window.print()">Print Page</button>
         <button class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
         <button class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
       </div>
