--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ol class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -48,7 +48,7 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
-      </ul>
+      </ol>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
